Added components for the modals

--- a/ClientApp/src/components/pages/Home.css
+++ b/ClientApp/src/components/pages/Home.css
@@ -19,3 +19,15 @@
 .listName:hover {
   background-color: #f2f2f2;
 }
+
+.btnGroup {
+  width: 100%;
+}
+
+.btnName {
+  width: 100%;
+}
+
+.title {
+  text-decoration: underline;
+}
